# weather-bingo

./: .dockerignore  .env.example  .gitignore  AGENTS.md  README.md  docker-compose.yml  specs.md
.container-use/: environment.json
.github/workflows/: ci.yml
.opencode/plans/: architectural-cleanup.md
api/: Cargo.toml  Dockerfile  railway.toml
api/migrations/: 001_create_races.sql  002_create_checkpoints.sql  003_create_forecasts.sql  004_add_upsert_constraints.sql  004_seed_vasaloppet.sql  005_create_yr_responses.sql  006_drop_forecasts_raw_response.sql  007_add_yr_model_run.sql  008_redesign_forecast_storage.sql  009_cleanup_bulk_forecast_data.sql  010_yr_responses_checkpoint_fk.sql  011_yr_responses_cascade.sql  012_forecasts_dedup_null_model_run.sql  013_add_snow_temperature.sql
api/src/: config.rs  errors.rs  helpers.rs  main.rs
api/src/db/: models.rs  queries.rs
api/src/routes/: forecasts.rs  health.rs  mod.rs  poller.rs  races.rs
api/src/services/: forecast.rs  gpx.rs  mod.rs  poller.rs  yr.rs
data/: vasaloppet-2026-test.gpx  vasaloppet-2026.gpx
frontend/: Dockerfile  eslint.config.js  index.html  nginx.conf.template  package-lock.json  package.json  railway.toml  tsconfig.json  vite.config.ts
frontend/src/: App.tsx  index.css  main.tsx  test-setup.ts
frontend/src/api/: client.ts  types.ts
frontend/src/components/: ErrorBoundary.test.tsx  ErrorBoundary.tsx
frontend/src/hooks/: useDebouncedValue.ts  useForecast.ts  usePassThroughTime.ts  useRace.ts
frontend/src/styles/: chartStyles.ts  theme.ts
scripts/: railway-setup.sh
(+32 files in other folders)
