[package]
name = "weather-bingo-api"
version = "0.1.0"
edition = "2021"
description = "Race-day weather forecasting API for cross-country skiing"

[dependencies]
# Web framework
axum = { version = "0.7", features = ["macros"] }
tokio = { version = "1", features = ["full"] }
tower-http = { version = "0.5", features = ["cors", "trace"] }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Database
sqlx = { version = "0.8", features = [
    "runtime-tokio",
    "tls-rustls",
    "postgres",
    "uuid",
    "chrono",
    "rust_decimal",
    "migrate",
] }

# Types
uuid = { version = "1", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
rust_decimal = { version = "1", features = ["serde-with-str"] }

# HTTP client (for yr.no)
reqwest = { version = "0.12", features = ["json", "rustls-tls"], default-features = false }

# XML parsing (for GPX files)
quick-xml = { version = "0.37", features = ["serialize"] }

# Error handling
thiserror = "1"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }

# OpenAPI / Swagger
utoipa = { version = "5", features = ["axum_extras", "uuid", "chrono"] }
utoipa-swagger-ui = { version = "8", features = ["axum"] }

[dev-dependencies]
wiremock = "0.6"
tokio-test = "0.4"
